# watchllm-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  publish-kernel.yml
examples/: .gitignore  README.md
examples/internal_docs/: IMPORTANT.md  PROMPT_TEMPLATE.md  README.md
examples/scenarios/: README.md
examples/scenarios/auth_flow/: README.md  auth.ts  db.ts  safe.ts  unsafe.ts
examples/scenarios/boundaries/: README.md
examples/scenarios/boundaries/backend/internal/: crypto.ts  database.ts
examples/scenarios/boundaries/backend/services/: user.ts
examples/scenarios/boundaries/frontend/: handler.ts
examples/scenarios/secrets/: README.md  safe.js  unsafe.js
kernel/: .gitignore  README.md  pyproject.toml
kernel/benchmarks/: run_benchmarks.py
kernel/docs/: CODEBASE_STATE.md  README.md
kernel/docs/benchmarks/: baseline.md
kernel/docs/specs/: cli-contract.md  editor-integration-readiness.md  reporting-contract.md
kernel/internal_docs/: AGENT-WORFLOW.md  AGENTS.md  DAILY_TASKS_NOTES.md  GH_MANUAL.md  IMPORTANT.md  KERNEL_DAILY_TASKS_NOTES.md  PROMPT_TEMPLATE.md  README.md  ROADMAP.md  ROADMAP2.md  WatchLLM Codebase Verification.md
kernel/rules/: README.md
kernel/src/watchllm_kernel/: __init__.py  cli.py  config_loader.py  engine.py  models.py  parser.py  reporting.py
kernel/src/watchllm_kernel/rules/: __init__.py  _ast_utils.py  auth_flow.py  boundary.py  forbidden_imports.py  secrets.py
kernel/tests/: test_auth_flow_rule.py  test_benchmarks.py  test_boundary_rule.py  test_cli.py  test_cli_contract.py  test_e2e.py  test_engine.py  test_fixture_corpus.py  test_forbidden_import_rule.py  test_models.py  test_parser.py  test_reporting.py  test_secrets_rule.py
kernel/tests/fixtures/rules/auth_flow/fail/: mutation_before_auth.ts
kernel/tests/fixtures/rules/auth_flow/pass/: auth_before_mutation.ts
kernel/tests/fixtures/rules/boundary/fail/: auth_imports_db_internal.ts
kernel/tests/fixtures/rules/boundary/pass/: auth_imports_public_contract.ts
kernel/tests/fixtures/rules/forbidden_imports/fail/: child_process_import.js
kernel/tests/fixtures/rules/forbidden_imports/pass/: safe_local_import.js
kernel/tests/fixtures/rules/secrets/fail/: hardcoded_stripe_secret.ts
kernel/tests/fixtures/rules/secrets/pass/: env_stripe_secret.ts
schemas/: .gitignore  AUDIT.md  README.md
schemas/internal_docs/: IMPORTANT.md  PROMPT_TEMPLATE.md  README.md
schemas/schemas/v1/: config.json  decision.json  event.json  kernel_execution_result.json  violation.json
vscode/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode/internal_docs/: IMPORTANT.md  PROMPT_TEMPLATE.md  README.md
vscode/src/: config.ts  diagnostics.ts  extension.ts  kernelExecutor.ts  saveHook.ts
vscode/test/: diagnostics.test.ts  kernelExecutor.test.ts  saveHook.test.ts
vscode/test/fixtures/: dummy-kernel.js
webproof/: README.md  pyproject.toml
webproof/examples/: webproof.json  webproof.yaml
webproof/src/watchllm_webproof/: __init__.py  accumulator.py  agent.py  cli.py  config.py  exceptions.py  transports.py
webproof/tests/: test_agent.py  test_async_agent.py  test_cli.py  test_config.py  test_transports.py
