[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watchllm-kernel"
version = "0.1.0"
description = "Deterministic local runtime governance kernel for autonomous coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "WatchLLM", email = "hello@watchllm.dev" }
]
urls = { repository = "https://github.com/WatchLLM/watchllm-oss", documentation = "https://docs.watchllm.dev" }
keywords = [
  "watchllm",
  "kernel",
  "runtime-governance",
  "agent-governance",
  "static-analysis",
  "ast",
  "tree-sitter"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]
dependencies = [
  "tree-sitter>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
watchllm-kernel = "watchllm_kernel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
