[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watchllm-kernel"
version = "0.1.0"
description = "Deterministic local runtime governance kernel for autonomous coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "WatchLLM" }
]
keywords = [
  "watchllm",
  "kernel",
  "runtime-governance",
  "agent-governance",
  "static-analysis"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]
dependencies = [
  "tree-sitter>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
  "pyyaml>=6.0.0",
]

[project.scripts]
watchllm-kernel = "watchllm_kernel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
