[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "watchllm-webproof"
version = "0.1.0"
description = "Public HTTP recording SDK with deterministic local proof summaries for WatchLLM WebProof."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "WatchLLM" }]
keywords = ["watchllm", "http", "provenance", "webproof"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
test = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<2",
  "pytest-httpx>=0.30,<1",
  "responses>=0.25,<1",
]

[project.scripts]
watchllm = "watchllm_webproof.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
